--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,3 +17,9 @@
 .header a:hover{
     color: orange;
 }
+.button{
+    width: 100px;
+    text-decoration: none;
+    font-size: 17px;
+    margin-left: 36px;
+}
