--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,18 +1,50 @@
-.shop-container{
+.shop-container {
     display: grid;
     grid-template-columns: 4fr 1fr;
 }
-.products-container{
+
+.products-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
     margin: 100px 50px;
 }
-.cart-container{
+
+.cart-container {
     background-color: rgba(255, 153, 0, 0.3);
 }
+
 @media screen and (max-width:1100px) {
-    .products-container{
+    .products-container {
         grid-template-columns: repeat(2, 1fr);
     }
+}
+
+.pagination-style {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.pagination-button-style {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: aqua;
+    color: red;
+    font-size: 20px;
+    font-weight: 600;
+    border: 0;
+    box-shadow: 2px 2px 4px gray;
+}
+
+.selected {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: red;
+    color: aqua;
+    font-size: 20px;
+    font-weight: 600;
+    border: 0;
+    box-shadow: 4px 4px 10px gray;
 }
